--- a/style.css
+++ b/style.css
@@ -14,25 +14,30 @@
   color: white;
 }
 
-body {
-  padding: 3rem 2rem 1rem;
-
-  background: #181719;
+html {
+  height: 100vh;
 }
 
-/*#region Header*/
+body {
+  background: #181719;
+  overflow-x: hidden;
+}
 
-header {
+/*#region Nav*/
+
+nav {
+  height: 8vh;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
-header a {
+nav .logo {
   font-family: "Crimson Pro", serif;
   font-size: 2rem;
-
   text-decoration: none;
+
+  margin-top: 2rem;
+  margin-left: 2rem;
   padding: 1rem;
 
   border: 1.5px solid white;
@@ -40,21 +45,92 @@ header a {
   transition: 0.4s border ease;
 }
 
-header a:hover {
+nav > .logo:hover {
   border: 4px solid white;
 }
 
-header .material-icons {
-  font-size: 4rem;
+.nav-links {
+  width: 100%;
+  height: 100vh;
+  background: rgb(27, 27, 27);
 
-  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+
+  list-style: none;
+
+  position: absolute;
+  right: 0;
+
+  transform: translateX(100%);
+  transition: all 0.6s ease-in;
+
+  z-index: 2;
 }
 
+.nav-active {
+  transform: translateX(0%);
+}
+
+.nav-links li a {
+  font-family: "Montserrat";
+  font-size: 20px;
+
+  text-decoration: none;
+  border: none;
+}
+
+.nav-links li:nth-child(1) {
+  font-weight: 700;
+}
+
+.burger {
+  margin-top: 2rem;
+  margin-right: 2rem;
+
+  cursor: pointer;
+  z-index: 2;
+}
+
+.burger div {
+  width: 30px;
+  height: 5px;
+
+  margin: 3px;
+
+  border-radius: 5px;
+  background-color: white;
+
+  transition: all 0.6s ease;
+}
+
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2 {
+  opacity: 0;
+}
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
 /*#endregion*/
 
 /*#region Main*/
 main {
-  margin-top: 5rem;
+  margin: 5rem 2rem;
 }
 
 main section {
@@ -170,8 +246,8 @@ main section .post main p {
 footer {
   display: flex;
   justify-content: center;
-  margin-top: 180px;
-  width: 100%;
+  margin: 180px auto 0;
+  width: 60%;
 }
 
 footer p {
@@ -179,4 +255,14 @@ footer p {
 
   padding: 1rem 2rem;
   border-top: 2px solid #a9a9a9;
+}
+
+@media screen and (min-width: 769px) {
+  .burger {
+    display: none;
+  }
+
+  nav .nav-links {
+    display: flex;
+  }
 }
