--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body > div {
 
 .scroll-toggle {
   position: fixed;
+  overflow-y: hidden;
 }
 
 /*#region Nav*/
@@ -71,7 +72,7 @@ nav .logo {
 
   list-style: none;
 
-  position: absolute;
+  position: fixed;
   right: 0;
 
   transform: translateX(100%);
@@ -349,6 +350,7 @@ footer p {
 
   footer p {
     padding-top: 15px;
+    border: none;
   }
 }
 
